--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@mui/material": "^5.15.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-stepper-horizontal": "^1.0.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
